# detr-tensorflow

./: .gitignore  LICENSE  README.md  bbox.py  eval.py  finetune_coco.py  finetune_hardhat.py  finetune_voc.py  hungarian_matching.py  inference.py  jeu.py  loss.py  main.py  optimizers.py  requirements.txt  tensorflow_inference.py  tensorrt_inference.py  test_coco.py  test_dataset.py  train_coco.py  training.py  training_config.py  webcam_inference.py
data/: augmentation.py  coco.py  processing.py  voc.py
detr_tensorrt/: TRTEngineBuilder.py  TRTExecutor.py  common.py  export_onnx.py  inference.py  onnx2engine.py  trt_helper.py
detr_tensorrt/plugins/ms_deform_im2col/: CMakeLists.txt  README.txt  test.py
detr_tensorrt/plugins/ms_deform_im2col/sources/: ms_deform_im2col_kernel.cu  ms_deform_im2col_kernel.h  ms_deform_im2col_plugin.cpp  ms_deform_im2col_plugin.h
detr_tensorrt/plugins/ms_deform_im2col/test_tensors/: flatten_attn_weight.npy  flatten_sampling_loc.npy  level_start_index.npy  output.npy  spatial_shapes.npy
detr_tf/: bbox.py  inference.py  optimizers.py  training.py  training_config.py
detr_tf/custom_ops/ms_deform_attn/: __init__.py  build.sh  ms_deform_attn.py  ms_deform_im2col.cc  ms_deform_im2col.cu.cc  test.py
detr_tf/data/: __init__.py  coco.py  processing.py  tfcsv.py  transformation.py  voc.py
detr_tf/logger/: training_logging.py  wandb_logging.py
detr_tf/loss/: compute_map.py  hungarian_matching.py  loss.py
detr_tf/networks/: custom_layers.py  deformable_detr.py  deformable_transformer.py  detr.py  position_embeddings.py  resnet_backbone.py  transformer.py  weights.py
examples/: finetuning_coco.py  finetuning_voc.py  training_coco.py
logger/: training_logging.py  wandb_logging.py
loss/: compute_map.py  hungarian_matching.py  loss.py
networks/: backbone.py  custom_layers.py  detr.py  position_embeddings.py  resnet_backbone.py  transformer.py  weights.py
notebooks/: DETR Tensorflow -  Finetuning tutorial.ipynb  DETR Tensorflow -  How to setup a custom dataset.ipynb  How to load a dataset.ipynb
